# clean_web_app

./: .gitignore  Cargo.toml  docker-compose.yml
builds/: arch_build  x86_64_build
database/: .env  Dockerfile
database/database_management/1/: up.sql
database/database_management/2/: down.sql  up.sql
scripts/: run_dev_server.sh  run_full_release_test.sh  run_unit_tests.sh
src/: counter.rs  database.rs  jwt.rs  main.rs
tests/: docker-compose.yml  todo.postman_collection.json
