[package]
name = "clean_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.6.5"
serde_json = "1.0.114"
serde = { version="1.0.197", features = ["derive"]}
actix-service = "2.0.2"
futures = "0.3.30"
diesel = { version = "1.4.8", features = ["postgres", 'chrono', 'r2d2']}
dotenv = "0.15.0"
chrono = {version="0.4.34", features = ["serde"]}
jsonwebtoken = "9.2.0"
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
bcrypt = "0.15.0"
uuid = {version="1.0.0", features=["serde", "v4"]}
redis = "0.24.0"
env_logger = "0.11.2"

[build-dependencies]
serde_yaml = "0.9.32"
serde = {version="1.0.197", features=["derive"]}

